<resources>
    <string name="app_name">WasteFoodManagementApp</string>
    <string name="food_waste_data">Globally, around 14 percent of food produced is lost between harvest and retail. Significant quantities are also wasted in retail and at the consumption level. An estimated 17 percent of total global food production is wasted.</string>
    <string name="location">Phagwara, Punjab</string>
    <string name="Shoaib">Shoaib Moona</string>
    <string name="Asim">Sayed Mohd Asim</string>
    <string name="Devesh">Devesh Pandey</string>
    <string name="Jayveer">Jayveer Mall</string>
    <string name="Ankit">Ankit Kumar</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="receive">Receive</string>
    <string name="donated">Donate</string>
    <string name="title_activity_contribution">ContributionActivity</string>
    <string name="teamstring"><b>WasteFood Management App</b> \nis an idea put forward by Syed Mohd Asim.
        We strongly believe that food is not meant to wasted, it is rather to be eaten or be shared.\n
        Whatever be the case, food being an essential part of life does not deserve to be wasted rather we feel that this app can bridge the gap between the one who has nothing and the one who has more than nothing.\n
        Our Team Members (Sanguins), include the guy who put forward this idea himself, Mr. Asim and the supporting members including Mr. Devesh, Mr. Shoaib, Mr. Jayveer and Mr. Ankit.\n
        The whole app has been built in sync with the 5 members as mentioned above.\n
        You can open the Drawer Navigation Window to check the individual profile of each member as stated above.\n
        Our whole code is available on the Github:\n
        <a href="https://github.com/Asazin007/WasteFoodManagementApp">Click here</a> For The Code.
    </string>
    <string name="Shoaibxml"><b>Shoaib Moona</b>\nCurrently pursuing B.Tech Computer Science from Lovely Professional University.\nMy Contributions:\n
        1) TeamActivity\n
        2) Whole Drawer Navigation Layout.\n
        3) Menu Bar and respective items.\n
        4) Layout for all five Team Member Activities.\n
        5) Firebase support (for fab, custom model class, CRD operations.)\n
        6) Custom Array Adapter (list view - NotiAdapter)\n
         <a href="https://github.com/shoaibmoona">Click here</a> for Github
    </string>
    <string name="Deveshxml">I\'m <b>Devesh Pandey</b>\nCurrently pursuing my Bachelors degree( Computer Science &amp; Engineering ) from LPU. Along with this I am also learning <b>Android App Development</b> &amp; <b>Full Stack web development</b>.\n\nMy contributions :\n
        1) Splash Screen.\n
        2) Logo/Layout of home activity.\n
        3) Sliding Animation.\n
        4) Gradient colour Design.\n
        5) My own activity ( in teams ).
    </string>

    <string name="Jayxml">I\'m <b>Jayveer Mall</b>\nCurrently pursuing Bachelors degree( Computer Science &amp; Engineering) (Hons) from LPU.\n
        My Contributions:\n
        1) Notification Activity\n
        2) Contribution Activity\n
        3) Binding toolbar layout for content scrolling styled xml
    </string>
    <string name="Asimxml">I\'m <b>Mohd Asim</b>,\nCurrently pursuing Currently pursuing Bachelors degree (Computer Science &amp; Engineeing) from LPU.\n
        My Contributions:\n
        1) Home Activity\n
        2) Donate Button\n
        3) Bottom Navigation\n
        4) Floating Action Button (Donate and Receive)
    </string>

    <string name="Ankitxml">I\'m <b>Ankit Kumar</b>\nCurrently pursuing Bachelors degree (Computer Science &amp; Engineeing) from LPU.\n
        My Contributions:\n
        1) Account Activity\n
        2) Login Activity (Layout and all)\n
        3) Register Activity (Layout and all)
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!--    Strings By Ankit below-->
    <string name="main_title">Hello You!</string>
    <string name="main_subtitle">
        Nice to meet you come and join our community!
        <br><b>Login</b> if you already have account</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="main_register">Register</string>
    <string name="reg_title">Create an account</string>
    <string name="reg_subtitle"><font color="#00C998"><b>Register</b> to get started with the app.</font>
    </string>
    <string name="reg_name">Your full name</string>
    <string name="reg_fullname">Your Full name</string>
    <string name="reg_email">Your email</string>
    <string name="reg_username">Your username</string>
    <string name="reg_password">Your password</string>
    <string name="reg_confirm_password">Confirm password</string>


    <string name="reg_lst_text">
        <font color="#00C998">I already have an account <b>Login</b></font></string>
    <string name="login_title">Login to app</string>
    <string name="login_subtitle"><font color="#00C998"><b>login</b> if you already have an account.</font>
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Enter password</string>
    <string name="login_forgpass">Forgot password?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <!--    String by Ankit ends here-->
</resources>